[UPDATE] Agregando recursos lottie, colores, string y agregando librerias en el gradle

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,5 +32,6 @@
 
     <!--itemFavorites-->
     <string name="txt_reating_beer">Califica esta cerveza</string>
+    <string name="txt_reating_beer_save">Guardar</string>
 
 </resources>
