--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,7 +27,7 @@
 
     <!--DialogLogOut-->
     <string name="txt_dialog_log_out_title">Aviso</string>
-    <string name="txt_dialog_log_out_body">Deseas salir de la aplicación</string>
+    <string name="txt_dialog_log_out_body">¿Deseas salir de la aplicación?</string>
     <string name="txt_dialog_log_out_calcel">Cancelar</string>
 
     <!--itemFavorites-->
